--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-modVersion = 0.2.4
+modVersion = 0.0.1
+coreVersion = 0.2.4
 modMinecraftVersion = 1.14.4
 modForgeVersion = 28.0.100
 mappingsChannel = snapshot
 mappingsVersion = 20190911-1.14.3
-modID = ourcraft-core
+modID = ourcraft-witchery
 modGroup = com.thenights
-modFilename = ourcraft-core
+modFilename = ourcraft-witchery
